@@ -6,6 +6,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -14,9 +15,12 @@ public class CorsConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:5173")); // frontend origin
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
+      config.setAllowedOrigins(Arrays.asList(
+                "http://localhost:3000", "http://localhost:4173", "http://localhost:5173"));
+        config.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "DELETE", "OPTIONS")); // Allowed methods
+        config.setAllowedHeaders(Arrays.asList(
+                "Authorization", "Content-Type", "Accept", "x-no-retry"));
         config.setAllowCredentials(true); // dùng nếu truyền token
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
